# yandex-geocoder

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .travis.yml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  tests.py  tox.ini
.github/workflows/: lint_and_test.yml  publish.yml  pythonpackage.yml  test.yml
tests/: conftest.py  test_address.py  test_coordinates.py  test_requests.py  tests_requests.py
tests/fixtures/: address_found.json  address_not_found.json  coords_found.json  coords_not_found.json
yamaps_coords/: __init__.py  client.py  exceptions.py
yandex_geocoder/: __init__.py  async_client.py  client.py  exceptions.py
