[tool.poetry]
name = "yandex-geocoder"
version = "2.0.0"  # VERSION_ANCHOR
description = "Simple library for getting address or coordinates via Yandex geocoder"
authors = ["Nikita Sivakov <sivakov512@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "yandex_geocoder"}]
homepage = "https://github.com/sivakov512/yandex-geocoder"
repository = "https://github.com/sivakov512/yandex-geocoder"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-debugger = "^4.1.2"
flake8-isort = "^6.0.0"
flake8-print = "^5.0.0"
flake8-pytest-style = "^2.0.0"
flake8-quotes = "^3.3.2"
isort = "^6.0.0"
mypy = "^1.0.0"
pytest = "^8.0.0"
pytest-deadfixtures = "^2.2.1"
flake8-black = "^0.3.6"
black = "^24.0.0"
pytest-cov = "^5.0.0"
coveralls = "^3.3.1"
types-requests = "^2.28.11.7"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
implicit_reexport = false

[tool.black]
line-length = 100
